--- a/Notes.html
+++ b/Notes.html
@@ -16,7 +16,7 @@
     <div class="intro">
         <h4>
             Make sure you have subscribed me on <a class="YT" href="https://youtube.com/@VRTech93?si=jbN_ow2Obk5eczLq">Youtube</a> and followed me on <a class="Insta" href="https://www.instagram.com/vr_tech93?igsh=MTEyeWw4ZGs4ajNocg==">Instagram</a> if you like my efforts.<br>
-            Below are the reference links to our social media handles. Join us on our <a class="Tl" href="https://t.me/techvr93">Telegram</a> channel and <a class="fb" href="https://www.facebook.com/profile.php?id=61559639071280&mibextid=ZbWKwL">FaceBook</a> page for real time updates.
+            Below are the reference links to our social media handles. Join us on our <a class="Tl" href="https://t.me/techvr93">Telegram</a> channel for real time updates.
         </h4>
     </div>
     <br>
